<resources>
    <string name="app_name">BasicVideoCall</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_call">CallActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_whiteboard">WhiteboardActivity</string>

    <!-- Preference Titles -->
    <string name="channel_header">Channel</string>
    <string name="video_header">Video</string>
    <string name="audio_header">Audio</string>

    <!-- Channel Preferences -->

    <!-- Video Preferences -->
    <string name="video_hw_title">Hardware acceleration</string>
    <string name="switch_summary_on">Enabled</string>
    <string name="switch_summary_off">Disabled</string>

    <!-- Audio Preferences -->
    <string name="audio_aec_title">Audio AEC</string>
</resources>
