<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/video_header">

        <SwitchPreferenceCompat
            app:key="video_hw_acceleration"
            app:summaryOn="@string/switch_summary_on"
            app:summaryOff="@string/switch_summary_off"
            app:title="@string/video_hw_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/audio_header">
        <ListPreference
            app:defaultValue="1"
            app:entries="@array/audio_aec_entries"
            app:entryValues="@array/audio_aec_values"
            app:key="audio_aec"
            app:title="@string/audio_aec_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>
